--- a/src/main/resources/exchange.properties
+++ b/src/main/resources/exchange.properties
@@ -1,5 +1,5 @@
 rabbitmq.queue.name=exchange-rates
-rabbitmq.topicExchange.name=topicExchange
+rabbitmq.topicExchange.name=exchange-rates-topic
 
 coinbase.name=Coinbase
 coinbase.api.url=https://api.coinbase.com/v2
