Integrate Bitpay exchange

--- a/src/main/resources/exchange.properties
+++ b/src/main/resources/exchange.properties
@@ -2,3 +2,6 @@ rabbitmq.queue.name=exchange-rates
 
 coinbase.name=Coinbase
 coinbase.api.url=https://api.coinbase.com/v2
+
+bitpay.name=Bitpay
+bitpay.api.url=https://bitpay.com
