Reach communication with currency rates agent

--- a/src/main/resources/exchange.properties
+++ b/src/main/resources/exchange.properties
@@ -1,7 +1,9 @@
-rabbitmq.queue.name=exchange-rates
+repository.queue.name=exchange-rates
+trigger.queue.name=stock-data-pull-queue-1
 
 coinbase.name=Coinbase
 coinbase.api.url=https://api.coinbase.com/v2
 
 bitpay.name=Bitpay
 bitpay.api.url=https://bitpay.com
+bitpay.queue.name=bitpay-queue
